# technical_test

./: .gitignore  README.md  pyproject.toml
src/api/: constants.py  load_dataset.py  logger.py  main.py
src/api/entities/: network_coverage.py  operator_coverage.py  point.py  proximity_data.py
src/api/routes/: dependencies.py  network_coverage.py
src/api/services/: address_coverage.py  coverage_checker.py  geocoder.py
tests/: conftest.py  test_geocoder.py  test_range_checker.py
