[project]
name = "papernest-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Recompsat Thomas",email = "thomas.recompsat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "ruff (>=0.11.5,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "rtree (>=1.4.0,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "mocker (>=1.1.1,<2.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "aioresponses (>=0.7.8,<0.8.0)",
    "black (>=25.1.0,<26.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{include = "api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "ENV=DEV",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning"
]
